--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:layout_weight="1">
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbarAlwaysDrawVerticalTrack="true">
+        android:layout_height="wrap_content">
         <include
             android:id="@+id/toolbar_action"
             layout="@layout/toolbar_action">
@@ -18,13 +18,13 @@
             layout="@layout/loading_view">
         </include>
 
-
         <!-- Post -->
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
+            android:layout_marginBottom="8dp"
             android:paddingLeft="10dp"
             android:id="@+id/layout_item_post" >
 
@@ -44,8 +44,7 @@
                             android:id="@+id/ic_post_user"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
-
-                            android:src="@drawable/ico_profile_grey"
+                            android:background="@drawable/ico_profile_grey"
                             android:layout_marginLeft="5dp"
                             android:layout_marginRight="5dp"
                             android:layout_marginTop="0dp"/>
@@ -58,7 +57,7 @@
                                 android:layout_width="200dp"
                                 android:layout_height="wrap_content"
                                 android:textAppearance="?android:attr/textAppearanceSmall"
-                                android:text="Pedro Xavier"
+                                android:text=""
                                 android:layout_marginLeft="3dp"
                                 android:layout_marginTop="2dp"
                                 android:textColor="#4d8eb4"
@@ -71,9 +70,8 @@
                                 android:layout_height="wrap_content"
                                 android:textAppearance="?android:attr/textAppearanceSmall"
                                 android:textSize="11sp"
-                                android:text="2016-01-30 13:45:30" />
+                                android:text="" />
                         </LinearLayout>
-
                     </LinearLayout>
                     <RelativeLayout
                         android:layout_width="110dp"
@@ -86,7 +84,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="2dp"
-                            android:layout_marginRight="15dp"
+                            android:layout_marginRight="20dp"
                             android:layout_alignParentRight="true"
                             android:background="@mipmap/ico_like_grey_24"/>
 
@@ -98,8 +96,7 @@
                             android:textSize="14sp"
                             android:layout_alignParentRight="true"
                             android:layout_marginTop="8dp"
-                            android:text="3"/>
-
+                            android:text=""/>
                     </RelativeLayout>
                 </LinearLayout>
             </LinearLayout>
@@ -116,7 +113,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Titulo del post"
+                    android:text=""
                     android:textSize="14sp"
                     android:textStyle="bold"
                     android:textColor="#333333"/>
@@ -125,11 +122,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/prueba"
+                    android:text=""
                     android:singleLine="false"
                     android:layout_marginTop="5dp"
                     android:ellipsize="end"
-                    android:maxLines="2"
+                    android:maxLines="20"
                     android:textColor="#666666"
                     android:textSize="14sp" />
 
@@ -192,27 +189,26 @@
                         android:text="Aprendizaje"
                         android:visibility="gone" />
                 </LinearLayout>
-
             </LinearLayout>
-
         </LinearLayout>
 
         <!-- Comments -->
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             android:background="@color/lightGrey"
+            android:layout_marginBottom="5dp"
             android:weightSum="1">
 
             <!-- Container Comments -->
             <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="331dp"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="15dp"
                 android:orientation="vertical"
-                android:background="@color/colorPrimaryLabel"
-                android:layout_weight="0.90">
+                android:background="@color/colorPrimaryLabel">
+               <!-- android:layout_weight="0.90">-->
                 <TextView
                     android:id="@+id/total_comments"
                     android:layout_width="match_parent"
@@ -221,47 +217,41 @@
                     android:text="0 Comentarios"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="5dp"
-                    android:textSize="15dp"
+                    android:textSize="14dp"
                     android:textColor="@color/mediumGrey"
                     android:layout_marginLeft="5dp" />
 
                 <include
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:id="@+id/layout_list_comments"
                     layout="@layout/fragment_list_comments">
                 </include>
 
-                <!--<ListView
-                    android:id="@+id/listComment"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true" />-->
+            </LinearLayout>
 
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center">
-                <Button
-                    android:id="@+id/btn_commenting"
-                    android:layout_width="150dp"
-                    android:layout_height="35dp"
-                    android:text="Comentar"
-                    android:textColor="#FFFFFF"
-                    android:textSize="13dp"
-                    android:background="@drawable/button_fill_primary"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginRight="90dp"
-                    android:layout_marginLeft="90dp"
-                    android:clickable="true"
-                    android:onClick="commenting"/>
-            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+            <Button
+                android:id="@+id/btn_commenting"
+                android:layout_width="150dp"
+                android:layout_height="35dp"
+                android:text="Comentar"
+                android:textColor="#FFFFFF"
+                android:textSize="13dp"
+                android:background="@drawable/button_fill_primary"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="6dp"
+                android:layout_marginRight="90dp"
+                android:layout_marginLeft="90dp"
+                android:clickable="true"
+                android:onClick="commenting"/>
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+
+</ScrollView>
