--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -48,7 +48,7 @@
                 android:id="@+id/img_profile"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-                android:background="@drawable/padre2"
+                android:background="@drawable/ico_avatar_white"
                 android:layout_marginLeft="110dp"
                 android:layout_gravity="center"
                 android:layout_weight="0.06" />
