--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -27,12 +27,13 @@
         android:paddingLeft="10dp"
         android:id="@+id/layout_item_question">
         <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <RelativeLayout
-                android:layout_width="310dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp">
+                android:layout_marginRight="15dp">
                 <TextView
                     android:id="@+id/txt_qcontent"
                     android:layout_width="match_parent"
@@ -44,7 +45,7 @@
                     android:singleLine="false"
                     android:layout_marginTop="0dp"
                     android:textColor="#444444"
-                    android:textSize="14sp" />
+                    android:textSize="15sp" />
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="40dp"
@@ -162,11 +163,12 @@
                 android:paddingRight="20dp"
                 android:clickable="true"
                 android:layout_alignParentRight="true">
+
                 <ImageView
                     android:id="@+id/ic_user"
                     android:layout_width="19dp"
                     android:layout_height="19dp"
-                    android:src="@drawable/ico_profile_grey" />
+                    android:background="@drawable/ico_profile_grey" />
                 <TextView
                     android:id="@+id/txt_quser"
                     android:layout_width="wrap_content"
@@ -235,7 +237,7 @@
             android:layout_weight="0.25">
             <Button
                 android:layout_width="150dp"
-                android:layout_height="50dp"
+                android:layout_height="45dp"
                 android:id="@+id/btn_answering"
                 android:text="Responder"
                 android:textColor="#FFFFFF"
