--- a/app/src/main/res/layout/fragment_item_post.xml
+++ b/app/src/main/res/layout/fragment_item_post.xml
@@ -24,7 +24,7 @@
                     android:id="@+id/ic_post_user"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/ico_profile_grey"
+                    android:background="@drawable/ico_profile_grey"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
                     android:layout_marginTop="0dp"/>
