Ajustes de usuario : actividad, logueado, pregunta directa

--- a/app/src/main/res/layout/activity_ask.xml
+++ b/app/src/main/res/layout/activity_ask.xml
@@ -8,6 +8,14 @@
         android:id="@+id/toolbar_action"
         layout="@layout/toolbar_action">
     </include>
+
+    <!--<TextView
+        android:id="@+id/txt_test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16dp"
+        android:text=""/>-->
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
