--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,6 +14,18 @@
         layout="@layout/toolbar_tabs">
     </include>
 
+    <!--<TextView
+        android:id="@+id/title_preference2"
+        android:text="@string/message_preferences"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:paddingBottom="5dp"
+        android:paddingTop="15dp"
+        android:paddingLeft="10dp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16dp"/>-->
+
     <FrameLayout
         android:id="@+id/layout_search_results"
         android:layout_width="match_parent"
